load raster file into postGIS by raster2Pgsql